--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.3.5
-Flask-SQLAlchemy==3.0.5
-Flask-Bcrypt==1.0.1
-Flask-Login==0.6.3
-pytesseract==0.3.11
-openai==0.29.0
-stripe==6.7.0
-psycopg2-binary==2.9.9
+Flask
+Flask-SQLAlchemy
+Flask-Bcrypt
+Flask-Login
+pytesseract
+openai
+stripe
+psycopg2-binary
